# Ischemic-Heart-Disease-Tensorflow-Model

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
nanabu/: __init__.py  dataset.py  features.py  plots.py
nanabu/modeling/: predict.py  train.py
notebooks/: model.ipynb
